# synccli

./: CMakeLists.txt  LICENSE  README.md
docs/: design.md
include/: cli.hpp  filters.hpp  sync.hpp  utils.hpp
src/: cli.cpp  filters.cpp  main.cpp  sync.cpp  utils.cpp
tests/: test_filters.cpp  test_main.cpp  test_sync.cpp  test_utils.cpp
